# APITestAutomationFramework

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: api-tests.yml
config/: config.local.yaml.example  config.yaml  docker.yaml  reportportal.yaml
scripts/: run-tests.ps1
src/api_test_framework/: __init__.py  config.py
src/api_test_framework/auth/: __init__.py  token_manager.py
src/api_test_framework/clients/: __init__.py  iam_api_client.py
src/api_test_framework/reporting/: __init__.py  attachments.py
tests/: conftest.py
tests/demo/: test_reportportal_dashboard.py
tests/integration/: test_bff_iam.py
tests/unit/: test_config.py  test_token_manager.py
